# learning-travis

./: .coverage_not_yet  .gitignore  .pylintrc  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
docs/: conf.py  index.rst
src/learning_travis/: __init__.py  main.py
test/: __init__.py  dummy_test.py
