[tool.poetry]
name = "learning-travis"
version = "0.1.0"
description = ""
authors = ["Tom Watson <tom.watson1024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.6"

# Test requirements
coverage = { version = "^4.5", optional = true }
pytest = { version = "^4.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^19.3b0"
coverage = "^4.5"
flake8 = "^3.6"
mypy = "^0.740"
pydocstyle = "^4.0"
pylint = "^2.2"
tox = "^3.14"

[tool.poetry.extras]
test = ["coverage", "pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"